fix manual broken in c3ce1b6

--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -298,15 +298,15 @@ is a concern, then do not use this option.
 \developer{-{}-testall}{A shortcut for running Coccinelle on all files in a
   subdirectory {\tt tests} such that there are all of a {\tt .cocci} file,
   a {\tt .c} file, and a {\tt .res} file, where the {\tt .res} contains the
-  expected result. Tests whose name ends in "_failure" are
-  known to fail and will not affect the total score. This command must be
-  run in the root coccinelle folder as it expects a folder named "tests"
-  to exist.}
+  expected result. Tests whose name ends in "\_failure" are known to fail and
+  will not affect the total score. This command must be run in the root
+  coccinelle folder as it expects a folder named "tests" to exist.}
 
 \developer{-{}-cpptestall}{A shortcut for running Coccinelle on all files
   in a subdirectory {\tt cpptests} (C++ tests) such that there are all of a
   {\tt .cocci} file, a {\tt .cpp} file, and a {\tt .res} file, where the
-  {\tt .res} contains the expected result.  This command must be
+  {\tt .res} contains the expected result. Tests whose name ends in "\_failure"
+  are known to fail and will not affect the total score. This command must be
   run in the root coccinelle folder as it expects a folder named "cpptests"
   to exist.}
 
