add --testall option that runs C and C++ tests

--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -312,6 +312,7 @@ is a concern, then do not use this option.
 
 \developer{-{}-testall}{A shortcut for running Coccinelle on all files
   in subdirectories {\tt ctests} and {\tt cpptests}. Mostly equivalent to
+  in subdirectories {\tt tests} and {\tt cpptests}. Mostly equivalent to
   running {\tt -{}-ctestall} and {\tt -{}-cpptestall}. This command must be
   run in the root coccinelle folder.}
 
