mark 3 tests as failure
These tests no longer work when the following conditions are all met:
- they are being run using --testall or --ctestall
- we are using the original tests/ cpptests/ file structure
- changes from commit 4093aad2d are in the tree

In the absence of an easy fix, we are marking these tests as failure.
Eventually, we want to make the tests run independently.

--- a/install.txt
+++ b/install.txt
@@ -5,7 +5,7 @@
 
  ** Dependencies **
 
-You must first install OCaml. Versions 4.08.0.-5.1.1 are supported.
+You must first install OCaml. Versions 4.08.0-5.1.1 are supported.
 See http://caml.inria.fr/download.en.html
 
 If your OCaml compiler has been configurated with --enable-flambda,
