fix typo in spatch_options.tex

--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -790,7 +790,7 @@ condition occurs, rather than only once.}
     -{}-recursive-includes}, when combined with the option {\bf
     -{}-include-headers-for-types}.  In this case, parsed header files are
   cached.  It is only the files that are treated within a single chunk that
-  can benefit from this cache, due to the lack of shared memory in ocaml.}
+  can benefit from this cache, due to the lack of shared memory in OCaml.}
 
 \subsection{External analyses}
 
